@@ -33,7 +33,7 @@ requires:
   Error::Pure: 0.15
   PYX::Parser: 0.05
   PYX::Utils: 0.01
-  Tags::Output::Raw: 0.1
+  Tags::Output::Raw: 0.11
   perl: 5.6.2
 resources:
   bugtracker: https://github.com/michal-josef-spacek/PYX-SGML-Tags/issues
