@@ -21,7 +21,7 @@ requires 'Class::Utils' => 0.05;
 requires 'Error::Pure' => 0.15;
 requires 'PYX::Parser' => 0.05;
 requires 'PYX::Utils' => 0.01;
-requires 'Tags::Output::Raw' => 0.10;
+requires 'Tags::Output::Raw' => 0.11;
 requires 'perl' => '5.6.2';
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/PYX-SGML-Tags/issues',
 resources 'homepage' => 'https://github.com/michal-josef-spacek/PYX-SGML-Tags';
