@@ -1,4 +1,5 @@
 0.07
+ - Add 'output_encoding' parameter.
  - Rewrite implicit encode() to PYX::Utils::encode().
  - Update copyright years.
 
